# temporal-batch-processing

./: .gitignore  README.md  pyproject.toml
protos/: order.proto
temporal_batch_processing/scripts/: fake_s3.py  generate_orders_for_test.py  generate_protos.py  start_temporal_dev_server.py
temporal_batch_processing/src/: activities.py  worker.py  workflows.py
temporal_batch_processing/src/clients/: duckdb_client.py
temporal_batch_processing/src/commands/: clean_table_command.py  create_partitions_command.py  enrich_order_command.py  fetch_files_metadata_command.py  list_files_command.py  read_orders_command.py
temporal_batch_processing/src/generated_protos/: __init__.pyi  order_pb2.py  order_pb2.pyi  order_pb2_grpc.py
temporal_batch_processing/src/models/: batch_completion.py  batch_processing_request.py  batch_progress.py  batching_options.py  config.py  file_metadata.py  file_path.py  partition_info.py  partition_workflow_input.py  partition_workflow_progress.py
temporal_batch_processing/tests/: fake_order_service.py  test_batch_processing_workflow.py
temporal_batch_processing/tests/resources/: orders_5.parquet  orders_7.parquet  orders_8.parquet
